@@ -4,7 +4,6 @@
 package com.cognitect.transit.impl;
 
 import com.cognitect.transit.*;
-import org.apache.commons.codec.binary.Base64;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -25,7 +24,7 @@ public class ReadHandlers {
         @Override
         public Object fromRep(String rep) {
 
-            return Base64.decodeBase64(rep.getBytes());
+            return Base64.getDecoder().decode(rep.getBytes());
         }
     }
 
@@ -94,7 +93,7 @@ public class ReadHandlers {
         @Override
         public Object fromRep(String rep) {
 
-            return new Double(rep);
+            return Double.valueOf(rep);
         }
     }
 
